Dev: add first drawing functions

--- a/project-files/Makefile
+++ b/project-files/Makefile
@@ -21,7 +21,7 @@ GDLIB= -lgd -lpng -lz -ljpeg -lfreetype -lm
 LD=gcc
 LDFLAGS=$(PTHREAD) $(GDLIB) $(GTKLIB) -export-dynamic -rdynamic -lm
 
-OBJS=    src/.o/main.o src/.o/filters.o src/.o/image_settings.o
+OBJS=    src/.o/main.o src/.o/filters.o src/.o/image_settings.o src/.o/drawing.o
 
 all: $(OBJS)
 	$(LD) -o $(TARGET) $(OBJS) $(LDFLAGS)
@@ -31,5 +31,7 @@ src/.o/filters.o: src/filters.c
 	$(CC) -c $(CCFLAGS) src/filters.c $(GDLIB) $(GTKLIB) -o src/.o/filters.o      
 src/.o/image_settings.o: src/image_settings.c
 	$(CC) -c $(CCFLAGS) src/image_settings.c $(GDLIB) $(GTKLIB) -o src/.o/image_settings.o  
+src/.o/drawing.o: src/drawing.c
+	$(CC) -c $(CCFLAGS) src/drawing.c $(GDLIB) $(GTKLIB) -o src/.o/drawing.o
 clean:
 	rm -f src/.o/*.o $(TARGET) -r cache/*
